# llm-quant-research-agent

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
datasets/: daily_bars.json
evals/tasks/: deterministic_core.yaml
examples/: momentum_pipeline.yaml  momentum_report_pipeline.yaml
src/quant_research_agent/: cli.py  permissions.py
src/quant_research_agent/agent/: artifacts.py  catalog.py  react_loop.py  repair.py  tools.py  tracing.py  workflow.py
src/quant_research_agent/engine/core/: builder.py  context.py  engine.py  registry.py  scheduler.py
src/quant_research_agent/engine/dsl/: models.py  parser.py  validator.py
src/quant_research_agent/engine/nodes/: base.py
src/quant_research_agent/engine/nodes/ai/: research_chat.py
src/quant_research_agent/engine/nodes/data/: market_bars.py
src/quant_research_agent/engine/nodes/factors/: momentum.py  rank.py
src/quant_research_agent/engine/nodes/output/: report.py
src/quant_research_agent/engine/nodes/triggers/: manual.py
src/quant_research_agent/evaluation/: runner.py
tests/: test_agent_tools.py  test_agent_workflow.py  test_artifacts.py  test_engine.py  test_evaluation.py  test_permissions.py  test_repair.py  test_tracing.py
